Make sure students don't get repeated. Apply some alignment.

--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,5 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
